Update Preferences Strings

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -195,34 +195,34 @@
     <string name="title_change_text_size">Tamanho da fonte do editor</string>
     <string name="idepref_about_title">Sobre o AndroidIDE</string>
     <string name="idepref_build_clearCache_title">Limpar caches do Gradle</string>
-    <string name="idepref_build_clearCache_summary">Limpe o diretório de caches do Gradle.  Isso excluirá todas as dependências baixadas pelo Gradle.  Os arquivos necessários serão baixados novamente na próxima compilação.</string>
+    <string name="idepref_build_clearCache_summary">Limpar o diretório de caches Gradle. Isto excluirá todas as dependências baixadas pela Gradle. Os arquivos requeridos serão baixados novamente na próxima compilação.</string>
     <string name="idepref_build_customgradlecommands_title">Comandos adicionais do Gradle</string>
     <string name="idepref_build_customgradlecommands_summary">Escolha comandos adicionais que serão adicionados durante a execução de cada tarefa</string>
     <string name="idepref_editor_fontsize_title">Tamanho da fonte</string>
     <string name="idepref_editor_fontsize_summary">Tamanho da fonte do editor</string>
-    <string name="idepref_editor_paintingflags_title">Non-printable painting flags</string>
-    <string name="idepref_editor_paintingflags_summary">Escolha quais caracteres non-printable devem ser desenhados pelo editor.</string>
-    <string name="idepref_editor_drawhexcolors_title">Desenhar sequências de cores hexadecimais</string>
+    <string name="idepref_editor_paintingflags_title">Bandeiras de pintura não imprimíveis</string>
+    <string name="idepref_editor_paintingflags_summary">Escolha quais caracteres não imprimíveis devem ser desenhados pelo editor</string>
+    <string name="idepref_editor_drawhexcolors_title">Desenhe sequências de cores hexadecimais</string>
     <string name="idepref_editor_drawhexcolors_summary">O editor deve desenhar uma string de cor hexadecimal?</string>
+    <string name="idepref_editor_word_wrap_title">Quebra de linha</string>
+    <string name="idepref_editor_word_wrap_summary">Use o wordwrap do editor</string>
+    <string name="idepref_editor_use_magnifier_title">Ativar lupa</string>
+    <string name="idepref_editor_use_magnifier_summary">Ampliar o texto na posição do cursor ao selecionar o texto no editor</string>
     <string name="idepref_editor_title">Editor</string>
-    <string name="idepref_build_title">Construção e execução</string>
+    <string name="idepref_build_title">Construir &amp; Rodar</string>
     <string name="title_open_projects">Abrir último projeto</string>
-    <string name="msg_open_projects">Se ativado, a IDE lembrará seu último projeto aberto e o abrirá toda vez que você reiniciar.</string>
-    <string name="title_confirm_project_open">Confirmar abertura do projeto</string>
-    <string name="msg_confirm_project_open">Pergunte antes de abrir o último projeto</string>
-    <string name="title_default_shell">Usar shell do sistema no terminal</string>
-    <string name="msg_default_shell">Se ativado, \'/system/bin/sh\' será usado no terminal.</string>
-    <string name="title_general">Geral</string>
-    <string name="title_tab_size">Tamanho das tab</string>
-    <string name="msg_tab_size">Especifique o número de espaços para as tabs</string>
+    <string name="msg_open_projects">Se verificado, a IDE se lembrará do último projeto aberto e será reaberto na próxima partida.</string>
+    <string name="title_confirm_project_open">Confirme a abertura do projeto</string>
+    <string name="msg_confirm_project_open">Pergunte antes de abrir o último projeto aberto.</string>
+    <string name="title_default_shell">Usar o sistema shell em terminal</string>
+    <string name="msg_default_shell">Se marcado, \'/system/bin/sh\' será usado no terminal.</string>
+    <string name="title_general">Em geral</string>
+    <string name="title_tab_size">Tamanho do TAB</string>
+    <string name="msg_tab_size">Especificar o número de espaços para TAB</string>
     <string name="msg_preferences">Preferências</string>
     <string name="pref_changelog">Registro de alterações</string>
     <string name="msg_editor_font_size">Por favor, escolha o tamanho da fonte padrão do editor:</string>
-    <string name="msg_clear_cache">Isso excluirá o diretório de caches criado pelo Gradle.  Se você excluí-lo, a próxima compilação pode demorar um pouco mais do que o normal, pois o Gradle fará o download dos arquivos necessários novamente.\nIMPORTANTE: Isso também excluirá o AAPT2.  Você precisará reinstalá-lo, caso contrário, ocorrerá uma falha de compilação.\n\nTem certeza de que deseja excluir os caches?</string>
-    <string name="idepref_editor_word_wrap_title">Quebra de linha</string>
-    <string name="idepref_editor_word_wrap_summary">Usar quebras de linha no editor</string>
-    <string name="idepref_editor_use_magnifier_title">Ativar lupa</string>
-    <string name="idepref_editor_use_magnifier_summary">Zoom de texto na posição do cursor ao selecionar texto no editor</string>
+    <string name="msg_clear_cache">Isso excluirá o diretório de caches criado pelo Gradle. Se você excluí-lo, a próxima compilação pode demorar um pouco mais do que o normal, pois o Gradle fará o download dos arquivos necessários novamente.\nIMPORTANTE: Isso também excluirá o AAPT2. Você precisará reinstalá-lo, caso contrário, ocorrerá uma falha de compilação.\n\nTem certeza de que deseja excluir os caches?</string>
 
     <!-- Error Messages used while Logging -->
     <string name="err_init_sdkinfo">Não foi possível inicializar as informações do SDK</string>
