--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -231,8 +231,8 @@
 
     <!-- Layout preview and designer -->
     <string name="msg_cannot_preview_layout">Não foi possível visualizar o layout!</string>
-    <string name="title_preview_layout">Pré-visualização do layout</string>
-    <string name="label_ui_designer_content">Conteúdo principal do designer de interface do usuário</string>
+    <string name="title_preview_layout">Visualizar layout</string>
+    <string name="label_ui_designer_content">Conteúdo principal do designer da UI</string>
     <string name="widget_textview">TextView</string>
     <string name="widget_button">Button</string>
     <string name="widget_group_android">Android</string>
@@ -251,89 +251,101 @@
     <string name="msg_applicable_attrs">Atributos aplicáveis</string>
     <string name="msg_attr_editor_actions">Ações</string>
     <string name="title_viewaction_delete">Excluir</string>
-    <string name="msg_viewaction_select_parent">Selecionar parent</string>
-    <string name="msg_no_view_parent">Esta visualização não tem um parent</string>
-    <string name="msg_yesno_def_title">Por favor, confirme</string>
+    <string name="msg_viewaction_select_parent">Selecionar parentesco</string>
+    <string name="msg_no_view_parent">Este view não possui um parente</string>
+    <string name="msg_yesno_def_title">Por favor confirme</string>
     <string name="msg_yesno_def_message">Tem certeza?</string>
     <string name="msg_view_deletion_failed">Não foi possível excluir a visualização.</string>
-    <string name="msg_empty_ui_layout">Nenhuma visualização foi adicionada.  Clique para adicionar.</string>
+    <string name="msg_empty_ui_layout">Nenhuma visualização foi adicionada. Clique para adicionar.</string>
     <string name="msg_no_attr_format">Nenhum formato de atributo está disponível para este atributo.</string>
     <string name="msg_generate_xml_failed">Falha ao gerar código XML</string>
     <string name="title_generating_xml">Gerando código XML</string>
-    <string name="title_code_generation_failed">Falha na geração de código</string>
-    <string name="msg_code_generation_failed">Falha ao gerar o código XML.  Deseja sair mesmo assim?</string>
-    <string name="msg_invalid_designer_result">UI Designer retornou resultado inválido</string>
-    <string name="msg_swipe_up">Deslize para cima para ver saída de compilação, logs e muito mais.</string>
-    <string name="msg_ide_crashed">AndroidIDE travou</string>
-    <string name="msg_report_crash">Abra um problema no github com o seguinte rastreamento de pilha:</string>
-    <string name="msg_crash_report_hint">Clique no botão abaixo para copiar o registro e abrir a página de problemas.</string>
+    <string name="title_code_generation_failed">Falha na geração do código</string>
+    <string name="msg_code_generation_failed">Falha ao gerar código XML. Você gostaria de sair mesmo assim?</string>
+    <string name="msg_invalid_designer_result">UI Designer retornou um resultado inválido</string>
+    <string name="msg_swipe_up">Deslize para ver a saída de compilação, logs e muito mais.</string>
+    <string name="msg_ide_crashed">AndroidIDE crashou</string>
+    <string name="msg_report_crash">Por favor, abra um assunto no github com o seguinte stacktrace :</string>
+    <string name="msg_crash_report_hint">Clique no botão abaixo para copiar o log e abrir a página de problemas.</string>
     <string name="msg_copy_report_action">Copiar e denunciar</string>
     <string name="msg_reading_bootstrap">Lendo o arquivo bootstrap…</string>
-    <string name="msg_bootstrap_installation_error">Falha na instalação do Bootstrap com a seguinte exceção.</string>
+    <string name="msg_bootstrap_installation_error">A instalação do bootstrap falhou com a seguinte exception.</string>
     <string name="title_translations">Traduções</string>
     <string name="title_compiler_module_install">Instalando o módulo do compilador</string>
     <string name="msg_compiler_module_install">O módulo do compilador está sendo instalado, aguarde…</string>
-    <string name="msg_compiler_module_install_failed">Falha na instalação do módulo do compilador.  O erro foi:\n%s</string>
+    <string name="msg_compiler_module_install_failed">Falha na instalação do módulo do compilador. O erro foi:\n%s</string>
     <string name="msg_compiler_module_installed">Módulo do compilador instalado com sucesso!</string>
     <string name="action_expand_selection">Expandir seleção</string>
     <string name="idepref_java_matchLower_title">Combinar as conclusões em letras minúsculas</string>
     <string name="idepref_editor_category_common">Comum</string>
     <string name="idepref_editor_category_java">Java</string>
     <string name="title_files_unsaved">Arquivos não salvos</string>
-    <string name="title_cancel_build">Cancelar Compilação</string>
-    <string name="title_sync_project">Sincronizar projeto</string>
-    <string name="msg_files_unsaved">Alguns arquivos não foram salvos.  Gostaria de salvá-los antes de fechar?  Os arquivos não salvos são: \n%s</string>
-    <string name="idepref_editor_autoSave_title">Salvar antes de fechar os arquivos</string>
-    <string name="idepref_editor_autoSave_summary">Salve os arquivos antes de fechá-los. Este é um recurso EXPERIMENTAL. Ele espera que você mesmo salve os arquivos.</string>
-    <string name="idepref_java_matchLower_summary">Se ativado, a digitação em letras minúsculas sugerirá classes e variáveis.</string>
+    <string name="msg_files_unsaved">Alguns arquivos não são salvos. Gostaria de salvá-los antes de fechar? Os arquivos não salvos são: \n%s</string>
+    <string name="idepref_editor_autoSave_title">Salve antes de fechar os arquivos</string>
+    <string name="idepref_editor_autoSave_summary">Salve os arquivos antes de fechá-los. Este recurso é EXPERIMENTAL. Espera-se que você mesmo salve os arquivos.</string>
+    <string name="idepref_java_matchLower_summary">Se ativado, digitar letras minúsculas ou maiúsculas sugerirá nomes de classe, bem como membros do escopo.</string>
     <string name="idepref_editor_ligatures_title">Ligaduras de fonte</string>
-    <string name="idepref_title_customGradleInstallation">Instalação personalizada do Gradle</string>
-    <string name="idepref_msg_customGradleInstallation">Especifique uma instalação personalizada do Gradle a ser usada para compilação. Isso SUBSTITUI a versão especificada em gradle-wrapper.properties.</string>
     <string name="idepref_editor_ligatures_summary">Ativar/desativar ligaduras de fonte</string>
-    <string name="title_gradle_service_notification_ticker">Serviço de compilação Gradle iniciado</string>
-    <string name="title_gradle_service_notification">Serviço de compilação Gradle</string>
-    <string name="msg_gradle_service_notification">AndroidIDE\'s O serviço de compilação Gradle está sendo executado em segundo plano.</string>
-    <string name="msg_running_task">Executando Tarefas: \'%1$s\'</string>
-    <string name="msg_initializing_project">Iniciando Projeto</string>
-    <string name="msg_project_initialized">Projeto Iniciado</string>
-    <string name="msg_project_initialization_failed">Falha na inicialização do projeto</string>
-    <string name="msg_project_not_initialized">O projeto não foi inicializado</string>
-    <string name="msg_ndk_currently_unsupported">Atualmente, o NDK não é oficialmente suportado. Este modelo funciona somente após a configuração do NDK</string>
-    <string name="msg_require_install_jdk_and_android_sdk">Você precisa instalar o JDK e o SDK do Android para que o IDE funcione. Para instalar pressione \'Sim\' e siga as instruções <![CDATA[ <a href="https://github.com/itsaky/androidide-build-tools#installing-in-androidide">here</a>]]></string>
-    <string name="msg_gradle_installation_path">Caminho de instalação do Gradle</string>
-    <string name="msg_gradle_installation_input_help">Deixe vazio para usar o wrapper Gradle.</string>
-    <string name="wizard_error_name_empty">O nome não pode ser vazio.</string>
-    <string name="wizard_error_name_illegal">O nome não pode conter caracteres ilegais</string>
-    <string name="wizard_save_location">Local para salvar</string>
-    <string name="wizard_language">Linguagem do projeto</string>
-    <string name="wizard_loading">Carregando Modelos…</string>
-
     <string name="yes">Sim</string>
     <string name="no">Não</string>
-    <string name="next">Próximo</string>
-    <string name="exit">Sair</string>
     <string name="msg_apk_install_intent_failed">Não foi possível iniciar a intenção de instalação do APK</string>
     <string name="msg_viewaction_add_attr">Adicionar atributo</string>
-    <string name="msg_search_attrs">Pesquisar atributos…</string>
+    <string name="msg_search_attrs">Atributos de pesquisa…</string>
     <string name="hint_dimension_val">Valor da dimensão</string>
-    <string name="hint_dimension_res">Resource dimension</string>
-    <string name="hint_boolean_res">Resource boolean</string>
-    <string name="msg_file_tree">Árvore de arquivos</string>
-    <string name="hint_color_resource">Resource color</string>
+    <string name="hint_dimension_res">Recurso de dimensão</string>
+    <string name="hint_boolean_res">Recurso booleano</string>
+    <string name="msg_file_tree">Lista de arquivos</string>
+    <string name="hint_color_resource">Recurso de cor</string>
     <string name="title_color_picker">Seletor de cores</string>
-    <string name="hint_string_value">Texto da string</string>
-    <string name="hint_string_resource">Resource string</string>
-    <string name="hint_resource_reference">Qualquer referência de resource</string>
+    <string name="hint_string_value">Valor da string</string>
+    <string name="hint_string_resource">Recurso de string</string>
+    <string name="hint_resource_reference">Qualquer referência de recurso</string>
     <string name="msg_code_actions">Ações</string>
     <string name="title_format_code">Formatar código</string>
-    <string name="idepref_java_useGoogleStyle_title">Use a formatação de código no estilo Java do Google</string>
+    <string name="idepref_java_useGoogleStyle_title">Usar a formatação de código do Google Java Style</string>
     <string name="idepref_java_useGoogleStyle_summary">Use a configuração de formatação de código Java Style do Google para formatar o código fonte Java.</string>
-    <string name="idepref_visiblePassword_title">Dica de senha</string>
-    <string name="idepref_visiblePassword_summary">Quando ativado, nenhuma dica de senha será mostrada pelo teclado.</string>
+    <string name="idepref_visiblePassword_title">Bandeira de senha visível</string>
+    <string name="idepref_visiblePassword_summary">Use para não exibir nenhuma dica de senha.</string>
     <string name="previous">Anterior</string>
     <string name="msg_replacing">Substituindo…</string>
+    <string name="title_gradle_service_notification_ticker">Serviço de compilação Gradle iniciado</string>
+    <string name="title_gradle_service_notification">Serviço de compilação Gradle</string>
+    <string name="msg_gradle_service_notification">O serviço de construção Gradle do AndroidIDE está em segundo plano.</string>
+    <string name="title_cancel_build">Cancelar compilação</string>
+    <string name="title_warning">Aviso</string>
+    <string name="msg_ndk_currently_unsupported">Atualmente, o NDK não é oficialmente suportado. Este modelo só funciona depois que você configurar a NDK</string>
+    <string name="msg_initializing_project">Inicializando projeto</string>
+    <string name="msg_project_initialized">Projeto inicializado</string>
+    <string name="msg_project_initialization_failed">Falha na inicialização do projeto</string>
+    <string name="msg_project_not_initialized">O projeto não foi inicializado</string>
+    <string name="msg_running_task">Tarefa em execução: \'%1$s\'</string>
+    <string name="msg_replacement">Substituição</string>
+    <string name="title_sync_project">Sincronizar projeto</string>
+    <string name="wizard_error_name_empty">O nome não pode ser vazio.</string>
+    <string name="wizard_error_name_illegal">O nome não pode conter caracteres ilegais</string>
+    <string name="wizard_save_location">Salvar localização</string>
+    <string name="wizard_language">Idioma do projeto</string>
+    <string name="wizard_loading">Modelos carregando…</string>
+    <string name="wizard_toolchain">C++ Padrão</string>
+    <string name="next">Próximo</string>
+    <string name="exit">Sair</string>
+    <string name="idepref_title_tpFix">Correção de ponteiros de tag JDK 11</string>
+    <string name="idepref_msg_tpFix">Defina LD_PRELOAD como libhook.so para corrigir o problema de ponteiros de tag para o JDK 11 no Android 11 [OBSOLETO - Prefira usar o JDK 17].</string>
+    <string name="idepref_title_customGradleInstallation">Instalação personalizada do Gradle</string>
+    <string name="idepref_msg_customGradleInstallation">Especifique uma instalação personalizada do Gradle a ser usada para compilação. Isso SUBSTITUI a versão especificada em gradle-wrapper.properties.</string>
+    <string name="msg_gradle_installation_path">Caminho de instalação do Gradle</string>
+    <string name="msg_gradle_installation_input_help">Deixe em branco para usar o wrapper Gradle.</string>
+    <string name="msg_require_install_jdk_and_android_sdk">Você precisa instalar o JDK e o SDK do Android para que o IDE funcione. Para instalar, clique em \'Sim\' e siga as instruções <![CDATA[ <a href="https://github.com/itsaky/androidide-build-tools#installing-in-androidide">here</a>]]></string>
+ 
     <string name="build_status_idle">Nenhuma compilação em andamento</string>
-    <string name="build_status_in_progress">Compilação em andamento…</string>
+    <string name="build_status_in_progress">Construção em andamento…</string>
     <string name="build_status_failed">Falha na construção. Consulte a saída da compilação para obter mais detalhes.</string>
-    <string name="build_status_sucess">Construido com sucesso</string>
+    <string name="build_status_sucess">Construir com sucesso</string>
+    <string name="msg_output_text_extraction_failed">Falha ao obter texto do editor</string>
+    <string name="template_def_app_name">Minha Aplicação</string>
+    <string name="err_invalid_data_by_intent">A intenção retornou dados inválidos</string>
+    <string name="msg_select_from_primary_storage">Selecione um diretório do armazenamento primário</string>
+    <string name="err_authority_not_allowed">Autoridade \'%s\' não permitida</string>
+    <string name="idepref_useIcu_title">Use a biblioteca ICU</string>
+    <string name="idepref_useIcu_summary">Use a biblioteca ICU para usar bordas de palavras de recuperação para seleção de palavras de toque duplo e pressionamento longo.</string>
 </resources>
