Fixed typo in changelog

--- a/changelogs/v2.1.2-beta.md
+++ b/changelogs/v2.1.2-beta.md
@@ -4,7 +4,7 @@ This release focuses mostly on the LSP implementations.
 
 ## Important notes
 
-- Most of the things are now dependent on the initialization of the project, including the Java and XML, find in project, etc. So, it is highly recommended that you wait for the project to he initialized properly.
+- Most of the things are now dependent on the initialization of the project, including the Java and XML LSP, find in project, etc. So, it is highly recommended that you wait for the project to be initialized properly.
 
 ## Additions
 
