Fixed changelog for PRs #331 and #368

--- a/changelogs/v2.1.2-beta.md
+++ b/changelogs/v2.1.2-beta.md
@@ -13,7 +13,7 @@ This release focuses mostly on the LSP implementations.
 - Horizontal + vertical (expanded) editor actions window.
 - Symbol input for text and other files. By @AndreyKozhev (#400).
 - Support for range code formatting. By @AndreyKozhev (#405).
-- Added Bengali translations. By @Vaibhav8309 (#331, #336).
+- Added Bengali translations. By @deepkrg17 (#331, #368).
 
 ## Fixes
 
