--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -353,4 +353,7 @@
     <!--There must be exactly two '@@' sorrounding the text that should be clickable.-->
     <string name="msg_swipe_for_files">@@फाइल्स@@ के लिए बाएं स्वाइप करें।</string>
     <string name="msg_swipe_for_output">@@बिल्ड आउटपुट@@ के लिए ऊपर स्वाइप करें।</string>
+  <string name="open_with">बाहरी ऐप के साथ खोलें</string>
+    <string name="idepref_editor_useSoftTabs_title">सॉफ्ट टैब का उपयोग करें</string>
+    <string name="idepref_editor_useSoftTabs_summary">चुनें कि टैब वर्ण (\\t) के बजाय रिक्त स्थान का उपयोग करना है या नहीं।</string>
 </resources>
