Updated changelog draft

--- a/changelogs/v2.1.2-beta.md
+++ b/changelogs/v2.1.2-beta.md
@@ -13,9 +13,13 @@ This release focuses mostly on the LSP implementations.
 - Horizontal + vertical (expanded) editor actions window.
 - Symbol input for text and other files. By @AndreyKozhev (#400).
 - Support for range code formatting. By @AndreyKozhev (#405).
+- You can now choose to open a file with external application. By @AndreyKozhev (#442).
+- Added a preference to toggle usage of soft tabs.
 - Added Bengali translations. By @deepkrg17 (#331, #368).
 
 ## Fixes
+
+Following issues have been fixed in this release :
 
 - Incomplete classpath provided by the Tooling API implementation.
 - Broken import auto completion (#225).
@@ -38,6 +42,8 @@ This release focuses mostly on the LSP implementations.
 - Cannot find attribute `app:popupOverlay` in template projects.
 - Invalid icons shown for files in search results (#389).
 - Fixed a bug that caused `SymbolInputView` to show nothing. By @AndreyKozhev (#400).
+- Options menu items are not updated in some cases.
+- Options menu items are cleared when a build is in progress and the IDE is minimized.
 
 ## Improvements
 
@@ -49,5 +55,6 @@ This release focuses mostly on the LSP implementations.
 - Use Storage Access Framework (SAF) for picking directories.
 - 'Preview layout' item now has more priority than other options menu icons (#243).
 - Do not show editor actions window when in search mode.
+- Updated Hindi translations. By @Premjit-Chowdhury (#443).
 - Updated Russian translations. By @AndreyKozhev (@237, #292, #363, #395).
 - Updated Portuguese translations. By @MatheusTGamerPro (#286) and @FrioGitHub (#398).
