Update Files strings

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -115,74 +115,75 @@
   <string name="template_cpp">C++ nativo</string>
   <string name="template_cpp_description">Cria um novo projeto com uma Activity Vazia configurada para usar JNI</string>
 
-    <!-- Files -->
-    <string name="save">Salvar</string>
-    <string name="menu_find">Encontrar</string>
-    <string name="menu_find_file">Encontrar no arquivo</string>
-    <string name="menu_find_project">Encontrar no projeto</string>
-    <string name="msg_search_modules">Buscar em módulos</string>
-    <string name="msg_no_modules">Nenhum módulo encontrado no projeto</string>
-    <string name="hint_find_project_filter">Filtrar extensões de arquivo (opcional)</string>
-    <string name="msg_find_project_filter">Separados por \'|\'</string>
-    <string name="msg_empty_search_query">Por favor, digite o texto</string>
-    <string name="msg_select_search_modules">Selecione os módulos para pesquisar</string>
-    <string name="msg_searching_project">Encontrando no projeto, aguarde…</string>
-    <string name="view_search_results">Procurar Resultados</string>
-    <string name="copying_files">Copiando arquivos</string>
-    <string name="writing_files">Escrevendo arquivos</string>
-    <string name="copying_assets">Copiando recursos</string>
-    <string name="failed_create_project_dir">Falha na criação do projeto!</string>
-    <string name="failed_write_file">Falha ao criar o arquivo: %s</string>
-    <string name="asset_copy_failed">Falha ao copiar template para o armazenamento!</string>
-    <string name="cannot_create_temp">Falha ao criar diretório de projeto temporário!</string>
-    <string name="project_created_successfully">Projeto criado com sucesso!</string>
-    <string name="msg_begin_project_write">Iniciando o processo de escrita</string>
-    <string name="msg_folder_creation_failed">Falha ao criar pasta!</string>
-    <string name="msg_file_creation_failed">Falha ao criar arquivo!</string>
-    <string name="msg_folder_created">Pasta criada com sucesso!</string>
-    <string name="msg_file_created">Arquivo criado com sucesso!</string>
-    <string name="msg_folder_exists">A pasta já existe!</string>
-    <string name="msg_file_exists">O arquivo já existe!</string>
-    <string name="msg_invalid_name">Nome inválido!</string>
-    <string name="text_create">Criar</string>
-    <string name="msg_can_contain_slashes">Se o caminho contiver o Separador de Arquivos (\'/\'), então os diretórios necessários (pai) serão criados se eles não existirem.</string>
-    <string name="folder_name">Nome da pasta</string>
-    <string name="file_name">Nome do arquivo</string>
-    <string name="new_name">Novo nome</string>
-    <string name="new_file">Novo arquivo</string>
-    <string name="create_auto_layout">Criar arquivo de layout automaticamente</string>
-    <string name="new_java_class">Nova classe Java</string>
-    <string name="new_xml_resource">Novo recurso XML</string>
-    <string name="new_folder">Nova pasta</string>
-    <string name="title_confirm_delete">Confirmar exclusão</string>
-    <string name="msg_confirm_delete">Tem certeza de que deseja excluir:\n%s?</string>
-    <string name="copied">Copiado com sucesso!</string>
-    <string name="msg_rename_file">Digite um novo nome para o arquivo/pasta.</string>
-    <string name="renamed">Renomeado com sucesso!</string>
-    <string name="rename_failed">Não foi possível renomear o arquivo!</string>
-    <string name="deleted">Apagado com sucesso!</string>
-    <string name="delete_failed">Não foi possível excluir o arquivo!</string>
-    <string name="copy_path">Copiar caminho</string>
-    <string name="rename_file">Renomear</string>
-    <string name="delete_file">Excluir</string>
-    <string name="file_options">Opções de arquivo</string>
-    <string name="action_closeAll">Fechar tudo</string>
-    <string name="action_closeOthers">Fechar outros</string>
-    <string name="action_closeThis">Fechar</string>
-    <string name="all_saved">Todos os arquivos foram salvos!</string>
-    <string name="msg_newfile_dest">Destino: %s/</string>
-    <string name="restype_drawable">Drawable</string>
-    <string name="restype_layout">Layout</string>
-    <string name="restype_menu">Menu</string>
-    <string name="restype_other">Outro</string>
-    <string name="classtype_class">Classe</string>
-    <string name="classtype_activity">Activity</string>
-    <string name="classtype_interface">Interface</string>
-    <string name="classtype_enum">Enum</string>
-    <string name="msg_checking_storage_permissions">Verificando as permissões de armazenamento</string>
-    <string name="msg_failed_list_files">Falha ao listar os arquivos do projeto!</string>
-    <string name="msg_storage_denied">Não é possível prosseguir sem permissões de armazenamento</string>
-    <string name="msg_storage_granted">Permissões de armazenamento concedidas!</string>
+  <!-- Files -->
+  <string name="save">Salvar</string>
+  <string name="menu_find">Encontrar</string>
+  <string name="menu_find_file">Encontrar no arquivo</string>
+  <string name="menu_find_project">Encontrar no projeto</string>
+  <string name="msg_search_modules">Buscar em módulos</string>
+  <string name="msg_no_modules">Nenhum módulo encontrado no projeto</string>
+  <string name="hint_find_project_filter">Filtrar extensões de arquivo (opcional)</string>
+  <string name="msg_find_project_filter">Separados por \'|\'</string>
+  <string name="msg_empty_search_query">Por favor, digite o texto</string>
+  <string name="msg_select_search_modules">Selecione os módulos para pesquisar</string>
+  <string name="msg_searching_project">Encontrando no projeto, aguarde…</string>
+  <string name="view_search_results">Procurar Resultados</string>
+  <string name="copying_files">Copiando arquivos</string>
+  <string name="writing_files">Escrevendo arquivos</string>
+  <string name="copying_assets">Copiando recursos</string>
+  <string name="failed_create_project_dir">Falha na criação do projeto!</string>
+  <string name="failed_write_file">Falha ao criar o arquivo: %s</string>
+  <string name="asset_copy_failed">Falha ao copiar template para o armazenamento!</string>
+  <string name="cannot_create_temp">Falha ao criar diretório de projeto temporário!</string>
+  <string name="project_created_successfully">Projeto criado com sucesso!</string>
+  <string name="msg_begin_project_write">Iniciando o processo de escrita</string>
+  <string name="msg_folder_creation_failed">Falha ao criar pasta!</string>
+  <string name="msg_file_creation_failed">Falha ao criar arquivo!</string>
+  <string name="msg_folder_created">Pasta criada com sucesso!</string>
+  <string name="msg_file_created">Arquivo criado com sucesso!</string>
+  <string name="msg_folder_exists">A pasta já existe!</string>
+  <string name="msg_file_exists">O arquivo já existe!</string>
+  <string name="msg_invalid_name">Nome inválido!</string>
+  <string name="text_create">Criar</string>
+  <string name="msg_can_contain_slashes">Se o caminho contiver o Separador de Arquivos (\'/\'), então os diretórios necessários (pai) serão criados se eles não existirem.</string>
+  <string name="folder_name">Nome da pasta</string>
+  <string name="file_name">Nome do arquivo</string>
+  <string name="new_name">Novo nome</string>
+  <string name="new_file">Novo arquivo</string>
+  <string name="create_auto_layout">Criar arquivo de layout automaticamente</string>
+  <string name="new_java_class">Nova classe Java</string>
+  <string name="new_xml_resource">Novo recurso XML</string>
+  <string name="new_folder">Nova pasta</string>
+  <string name="title_confirm_delete">Confirmar exclusão</string>
+  <string name="msg_confirm_delete">Tem certeza de que deseja excluir:\n%s?</string>
+  <string name="copied">Copiado com sucesso!</string>
+  <string name="msg_rename_file">Digite um novo nome para o arquivo/pasta.</string>
+  <string name="renamed">Renomeado com sucesso!</string>
+  <string name="rename_failed">Não foi possível renomear o arquivo!</string>
+  <string name="deleted">Apagado com sucesso!</string>
+  <string name="delete_failed">Não foi possível excluir o arquivo!</string>
+  <string name="copy_path">Copiar caminho</string>
+  <string name="rename_file">Renomear</string>
+  <string name="delete_file">Excluir</string>
+  <string name="file_options">Opções de arquivo</string>
+  <string name="action_closeAll">Fechar tudo</string>
+  <string name="action_closeOthers">Fechar outros</string>
+  <string name="action_closeThis">Fechar</string>
+  <string name="all_saved">Todos os arquivos foram salvos!</string>
+  <string name="msg_newfile_dest">Destino: %s/</string>
+  <string name="restype_drawable">Drawable</string>
+  <string name="restype_layout">Layout</string>
+  <string name="restype_menu">Menu</string>
+  <string name="restype_other">Outro</string>
+  <string name="classtype_class">Classe</string>
+  <string name="classtype_activity">Activity</string>
+  <string name="classtype_interface">Interface</string>
+  <string name="classtype_enum">Enum</string>
+  <string name="msg_checking_storage_permissions">Verificando as permissões de armazenamento</string>
+  <string name="msg_failed_list_files">Falha ao listar os arquivos do projeto!</string>
+  <string name="msg_storage_denied">Não é possível prosseguir sem permissões de armazenamento</string>
+  <string name="msg_storage_granted">Permissões de armazenamento concedidas!</string>
+  <string name="open_with">Abrir com...</string>
 
     <!-- Code Editor -->
     <string name="undo">Desfazer</string>
